overflow username in friend suggestion fixed

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -137,12 +137,12 @@ margin-bottom:10px;
 
 }
 
-.friend-suggestion h3{
+.friend-suggestion h3 {
     padding:0px;
     margin:0px;
     color: black;
     max-width:100%;
-    overflow:hidden;
+    direction:rtl;
 }
 
 /******************************************************************************
